# mameox

./: ChangeMallocs.pl  CheckSections.pl  DBGMAMEoX_XBE.bat  Desectionize.pl  DumpGamesForEachDriver.pl  MAMEoX.NET2002.sln  MAMEoX.dsw  MAMEoX.plg  MAMEoX.sln  MAMEoX_VC6.dsw  MAMEoX_XBE.bat  RemoveCPUSections.pl  RemoveDriverSections.pl  Sectionize.pl  VCPPMame.h  imagebld.switch  imageblddbg.switch  readme.txt
Docs/: changelog.txt  mameox_faq.txt  readme.txt
Docs/Developer/: DebugHowto.txt  MergeChecklist.txt
MAME/: ChangeMallocs.pl  FindDependencies.pl  GenerateVCPROJFiles.pl  MAME.NET.vcproj  MAME.dsp  MAME.plg  MAME.vcproj  MAME.vcproj.old  MAME_VC6.dsp
MAME/docs/: gamelist.txt
MAME/src/: artwork.c  artwork.h  audit.c  audit.h  cdrom.c  chd.c  chdcd.c  chdman.c  cheat.c  common.c  common.h  config.c  core.mak  cpmame.mak  cpuexec.c  cpuexec.h  cpuint.c  cpuintrf.c  cpuintrf.h  datafile.c  drawgfx.c  drawgfx.h  driver.c  driver.h  fileio.c  fileio.h  harddisk.c  harddisk.h  hash.h  hdcomp.c  hiscore.c  info.c  inptport.c  inptport.h  input.c  input.h  mame.c  mame.h  mame.mak  mamedbg.c  (+27 more)
MAMEoX/: MAMEoX.NET.vcproj  MAMEoX.dsp  MAMEoX.plg  MAMEoX.vcproj  MAMEoX.vcproj.old  MAMEoX_VC6.dsp
MAMEoX/Includes/: DebugLogger.h  FontSet.h  GFilterManager.h  Gamepad.h  GraphicsManager.h  InputDevice.h  InputManager.h  Keyboard.h  Lightgun.h  MAMEoX.h  ROMList.h  SMBHandler.h  Sections.h  StdString.h  System_IniFile.h  System_StringModifier.h  Undocumented.h  VirtualMemoryManager.h  XBESectionUtil.h  osd_cpu.h  osinline.h  scale2x.h  virtualmemory.h  xbinput.h  xbox_Direct3DRenderer.h  xbox_FileIO.h  xbox_JoystickMouse.h  xbox_Keyboard.h  xbox_Network.h  xbox_Timing.h
MAMEoX/Sources/: CPUSections.cpp  DebugLogger.cpp  DriverSections.cpp  GFilterManager.cpp  Gamepad.cpp  GraphicsManager.cpp  InputManager.cpp  Keyboard.cpp  Lightgun.cpp  MAMEoXUtil.cpp  ROMList.cpp  SMBHandler.cpp  System_IniFile.cpp  VirtualMemoryManager.cpp  XBESectionUtil.cpp  scale2x.cpp  xbinput.cpp  xbox_Direct3DRenderer.cpp  xbox_Display.c  xbox_FileIO.c  xbox_FileIO.cpp  xbox_Input.c  xbox_JoystickMouse.c  xbox_Keyboard.c  xbox_Keyboard.cpp  xbox_Main.cpp  xbox_Miscelaneous.c  xbox_Network.cpp  xbox_Sound.c  xbox_Timing.c
MAMEoXLauncher/: MAMEoXLauncher.NET.vcproj  MAMEoXLauncher.vcproj  MAMEoXLauncher.vcproj.old  MAMEoXLauncher_VC6.dsp
MAMEoXLauncher/Includes/: BaseMenuView.h  BasePopupMenuView.h  BasePopupView.h  BaseView.h  Help.h  HelpScreen.h  LightgunCalibrationScreen.h  LightgunCalibrator.h  LightgunCalibratorScreen.h  ListView.h  OptionsPage.h  OptionsScreen.h  PNGFunctions.h  ROMList.h  ROMListScreen.h  ScreensaverScreen.h  Skin.h  Skin3PartBackdrop.h  SkinButtonInfo.h  SkinChooser.h  SkinChooserScreen.h  SkinChooserView.h  SkinDiffuseOverlay.h  SkinDivider.h  SkinElement.h  SkinHighlightBar.h  SkinIcon.h  SkinMenuBody.h  SkinMenuFooter.h  SkinMenuHeader.h  SkinProgressbar.h  SkinResource.h  SkinScreenshot.h  SkinScrollArea.h  SkinSpriteResource.h  SkinText.h  SkinTriggerInfo.h  StartMenu.h  StartMenuView.h  TVCalibrationScreen.h  (+5 more)
MAMEoXLauncher/MediaFiles/: AN10.abc  AN10.tga  AN11.abc  AN11.tga  AN12.abc  AN12.tga  ArialNarrow_12.abc  ArialNarrow_12.rdf  ArialNarrow_12.tga  ArialNarrow_16.abc  ArialNarrow_16.rdf  ArialNarrow_16.tga  Arial_16.abc  Arial_16.rdf  Arial_16.tga  CN10.abc  CN10.tga  CourierNew_12.abc  CourierNew_12.rdf  CourierNew_12.tga  FontAN10.rdf  FontAN11.rdf  FontAN12.rdf  FontCN10.rdf  FranklinGothicMedium_12.tga  FranklinGothicMedium_14.abc  FranklinGothicMedium_14.rdf  HawaiianPunk_16.abc  HawaiianPunk_16.rdf  HawaiianPunk_16.tga  Trebuchet_12.abc  Trebuchet_12.rdf  Trebuchet_12.tga  Trebuchet_14.abc  Trebuchet_14.rdf  Trebuchet_14.tga  mox-scrollicon-masks.txt  resource.rdf
MAMEoXLauncher/SkinParser/: MacroParser.l  MacroParser.y  MacroParser_lex.cpp  SkinMetadataParser.l  SkinMetadataParser.y  SkinMetadataParser_lex.cpp  SkinParser.l  SkinParser.y  SkinParser_lex.cpp  macroparser_yacc.cpp  macroparser_yacc.cpp.h  make.bat  skinmetadataparser_yacc.cpp  skinmetadataparser_yacc.cpp.h  skinparser_yacc.cpp  skinparser_yacc.cpp.h  unistd.h
MAMEoXLauncher/Sources/: BaseMenuView.cpp  BasePopupMenuView.cpp  BasePopupView.cpp  BaseView.cpp  Help.cpp  HelpScreen.cpp  LightgunCalibrationScreen.cpp  LightgunCalibrator.cpp  LightgunCalibratorScreen.cpp  ListView.cpp  OptionsPage.cpp  OptionsScreen.cpp  PNGFunctions.cpp  ROMList.cpp  ROMListScreen.cpp  ScreensaverScreen.cpp  Skin.cpp  Skin3PartBackdrop.cpp  SkinButtonInfo.cpp  SkinChooser.cpp  SkinChooserScreen.cpp  SkinChooserView.cpp  SkinElement.cpp  SkinHighlightBar.cpp  SkinIcon.cpp  (+16 more)
Media/: help.txt
Scripts/: ChangeMallocs.pl  CheckSections.pl  Desectionize.pl  DetermineFamilies.pl  DumpGamesForEachDriver.pl  FindDependencies.pl  GenerateMAMEVCPROJFile.pl  HandleCoreUpgrade.bat  MAMEoXScriptConstants.pm  OldSectionize.pl  Sectionize.pl
SharedResources/: SharedResources.vcproj
ZLIB/: ZLIB.NET.vcproj  ZLIB.dsp  ZLIB.plg  ZLIB.vcproj
c_m68000/: c_m68000.dsp  c_m68000.plg  c_m68000.vcproj
libsmb++/: AUTHORS  COPYING  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  autogen.sh  config.guess  config.h.in  config.sub  configure  configure.in  libsmb.NET.vcproj  libsmb.dsp  libsmb.dsw  libsmb.sln  libsmb.spec.in  libsmb.vcproj  ltconfig  ltmain.sh  mkinstalldirs
libsmb++/doc/: Makefile.am  Makefile.in  example.cpp  index.html
libsmb++/macros/: Makefile.am  Makefile.in  bool.m4  curses.m4
libsmb++/src/: CharCnv.cpp  CharCnv.h  DES.cpp  FileManagementInterface.cpp  IODescriptors.cpp  IOTypes.cpp  Makefile.am  Makefile.in  NBHostCache.cpp  NBHostCache.h  NMBIO.cpp  NMBIO.h  NameQueryInterface.cpp  NameServicePacket.cpp  NameServicePacket.h  NativeNMB.cpp  NativeNMB.h  NetBIOSPacket.cpp  NetBIOSPacket.h  Options.cpp  Resolve.cpp  Resolve.h  SMBCodes.h  SMBIO.cpp  SMBIO.h  SMBPacket.cpp  SMBPacket.h  SambaDefs.h  SambaLink.cpp  SambaNMB.cpp  SambaNMB.h  SessionIO.cpp  SessionPacket.cpp  Util.cpp  XBoxGetHost.cpp  defines.h  defines.h.in  smb++-config.in  smb++.h  strtool.h  (+2 more)
(+1916 files in other folders)
